-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
The symlinks were in place for compatibility, but the "new" /proc files have been in place since 2.4/2.5 so there is no problem to use the new locations immediately in all test scripts.
We need to keep the /proc symlinks in place for another few releases, so that old test scripts that use them will not break, but then they should be removed. Adding a #if LUSTRE_VERSION_CODE < OBD_OCD_VERSION(2, 14, 53) check around the symlink creation code to remove them in ~3 releases is probably enough. We may also need to remap the tunable locations in the config log processing.
- is related to
-
LU-12223 interop: conf-sanity test 28a fails with 'check lustre-OST0000.ost.writethrough_cache_enable failed!'
-
- Open
-