LU-11110 ofd: remove obdfilter.*.* symlinks in few releases

Add a #if LUSTRE_VERSION_CODE < OBD_OCD_VERSION(2, 14, 53, 0) check
around the obdfilter.*.* symlinks creation code to keep them in
place for another few releases, so that old test scripts that use
them will not break, then remove them.

Change-Id: I703c7ec3af8434b0de8b7cbed19c2c32611f6b18
Signed-off-by: Emoly Liu <emoly@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/32752
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Nunez <jnunez@whamcloud.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>